feat: add some basic static tags in index.html & add their respective dynamic tags in main.js modifying the header in header.js and the main content in main_content.js to get a basic portfolio structure

--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pablo Cordonié | CV</title>
+  <title>👨‍🏫️ Pablo Cordonié | CV</title>
 </head>
 
 <body>
-  <header></header>
-  <main></main>
+  <header>
+    <a class="rtc--cv-header-logo" href="#about"></a>
+    <nav>
+      <ul>
+        <li>
+          <a class="rtc--cv-header-skills" href="#skills">📚️ Skills</a>
+        </li>
+        <li>
+          <a class="rtc--cv-header-contact" href="#contact">📱️ Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="about">
+      <div class="rtc--cv-main-about_container">
+        <div class="rtc--cv-main-about-img_container"></div>
+        <div class="rtc--cv-main-about-text_container"></div>
+      </div>
+    </section>
+    <section id="skills"></section>
+    <section id="contact"></section>
+  </main>
   <footer></footer>
   <script type="module" src="/main.js"></script>
 </body>
