feat: add a favicon icon to index.html, add a logo to the header such as an image to the about content, both of them from data.js & add some styles to the header in style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>👨‍🏫️ Pablo Cordonié | CV</title>
+  <link rel="shortcut icon" href="./public/images/code-developer.png" type="image/x-icon" />
+  <title>Pablo Cordonié | CV</title>
 </head>
 
 <body>
