--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="./public/images/code-developer.png" type="image/x-icon" />
+  <link rel="stylesheet" href="./css/style.css">
   <title>Pablo Cordonié | CV</title>
 </head>
 
@@ -23,21 +24,23 @@
     </nav>
   </header>
   <main>
-    <section id="about">
+    <section class="rtc--cv-main-about" id="about">
       <div class="rtc--cv-main-about_container">
         <div class="rtc--cv-main-about-img_container"></div>
         <div class="rtc--cv-main-about-text_container"></div>
       </div>
     </section>
-    <section id="skills">
-      <label for="filter">
-        <h2>Skills</h2>
-      </label>
-      <input type="text" name="filter" id="filter">
-      <span role="img">🔍️</span>
+    <section class="rtc--cv-main-skills" id="skills">
+      <h2>Skills</h2>
+      <form>
+        <label for="filter">
+          <span role="img">🔍️</span>
+        </label>
+        <input type="text" name="filter" id="filter">
+      </form>
       <ul class="rtc--cv-main-skills_list"></ul>
     </section>
-    <section id="contact">
+    <section class="rtc--cv-main-contact" id="contact">
       <h2>Contact</h2>
       <div class="rtc--cv-main-contact_container"></div>
     </section>
