feat: begin to make HTML templates in every component & render the header and the about content with their placed styles by now

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="./public/images/code-developer.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="./images/code-developer.png" type="image/x-icon" />
   <link rel="stylesheet" href="./css/style.css">
   <script type="module" src="/main.js" defer></script>
   <title>Pablo Cordonié | CV</title>
@@ -12,41 +12,22 @@
 
 <body>
   <header>
-    <a class="rtc--cv-header-logo" href="#about"></a>
+    <a class="rtc--cv-header-logo" href=""></a>
     <nav>
       <ul>
-        <li>
-          <a class="rtc--cv-header-skills" href="#skills">Skills</a>
+        <li class="rtc--cv-header-skills">
+          <a href="">Skills</a>
         </li>
-        <li>
-          <a class="rtc--cv-header-contact" href="#contact">Contact</a>
+        <li class="rtc--cv-header-projects">
+          <a href="">Projects</a>
+        </li>
+        <li class="rtc--cv-header-contact">
+          <a href="">Contact</a>
         </li>
       </ul>
     </nav>
   </header>
-  <main>
-    <section class="rtc--cv-main-about" id="about">
-      <div class="rtc--cv-main-about_container">
-        <div class="rtc--cv-main-about-img_container"></div>
-        <div class="rtc--cv-main-about-text_container"></div>
-      </div>
-    </section>
-    <section class="rtc--cv-main-skills" id="skills">
-      <h2>Skills</h2>
-      <form>
-        <label class="rtc--cv-main-skills-input_title" for="filter">
-          <span role="img">🔍️</span>
-        </label>
-        <input class="rtc--cv-main-skills-input" type="text" name="filter" id="filter"
-          placeholder="Filter by name of the tech skill">
-      </form>
-      <ul class="rtc--cv-main-skills_list" id="skills-list"></ul>
-    </section>
-    <section class="rtc--cv-main-contact" id="contact">
-      <h2>Contact</h2>
-      <div class="rtc--cv-main-contact_container"></div>
-    </section>
-  </main>
+  <main></main>
   <footer>
     <p class="rtc--cv-footer_p">@2023 Rock{theCode} Todos los derechos reservados</p>
   </footer>
