feat: add a projects anchor to a new list-item at the header in index.html and put it inside the header in header.css, add a listener to every anchor from the header depending on its pathname in main.js, render the skills content from skills.js & place them centered as specified in skills.css

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <body>
   <header>
-    <a class="rtc--cv-header-logo" href=""></a>
-    <nav>
+    <a class="rtc--cv-header-logo" href="/home"></a>
+    <nav class="rtc--cv-header-nav">
       <ul>
-        <li class="rtc--cv-header-skills">
-          <a href="">Skills</a>
+        <li class="rtc--cv-header-nav-skills">
+          <a href="/skills">Skills</a>
         </li>
-        <li class="rtc--cv-header-projects">
-          <a href="">Projects</a>
+        <li class="rtc--cv-header-nav-projects">
+          <a href="/projects">Projects</a>
         </li>
-        <li class="rtc--cv-header-contact">
-          <a href="">Contact</a>
+        <li class="rtc--cv-header-nav-contact">
+          <a href="/contact">Contact</a>
         </li>
       </ul>
     </nav>
