--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="./images/code-developer.png" type="image/x-icon" />
   <link rel="stylesheet" href="./css/style.css">
   <script type="module" src="/main.js" defer></script>
-  <title>Pablo Cordonié | CV</title>
+  <title>Pablo Cordonié</title>
 </head>
 
 <body>
