--- a/index.html
+++ b/index.html
@@ -6,28 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="./images/code-developer.png" type="image/x-icon" />
   <link rel="stylesheet" href="./css/style.css">
-  <script type="module" src="/main.js" defer></script>
+  <script type="module" src="/app.js" defer></script>
   <title>Pablo Cordonié</title>
 </head>
 
 <body>
-  <header>
-    <a class="rtc--cv-header-logo" href="/home"></a>
-    <nav class="rtc--cv-header-nav">
-      <ul>
-        <li class="rtc--cv-header-nav-skills">
-          <a href="/skills">Skills</a>
-        </li>
-        <li class="rtc--cv-header-nav-projects">
-          <a href="/projects">Projects</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <header></header>
   <main></main>
-  <footer>
-    <p class="rtc--cv-footer_p">@2023 Rock{theCode} Todos los derechos reservados</p>
-  </footer>
+  <footer></footer>
 </body>
 
 </html>
