feat: update data.js, send the images from the public folder to a Cloudinary server to get a better loading performance when the page is reloading & change the network images in the public folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="./images/code-developer.png" type="image/x-icon" />
+  <link rel="shortcut icon"
+    href="https://res.cloudinary.com/ddd5cycm4/image/upload/v1705769523/code-developer_gwlkgn.png"
+    type="image/x-icon" />
   <link rel="stylesheet" href="./css/style.css">
   <script type="module" src="/app.js" defer></script>
   <title>Pablo Cordonié</title>
